syntax = "proto3";

package auction.v1;

option go_package = "github.com/auction/internal/interfaces/rpc/pb/auction/v1";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service AuctionService {
  rpc CreateLot (CreateLotRequest) returns (CreateLotResponse) {
    option (google.api.http) = {
      post: "/v1/lots"
      body: "*"
    };
  }
  rpc RefillBalance (RefillRequest) returns (RefillResponse) {
    option (google.api.http) = {
      post: "/v1/refill"
      body: "*"
    };
  }

  rpc PlaceBid (PlaceBidRequest) returns (PlaceBidResponse) {
    option (google.api.http) = {
      post: "/v1/bid"
      body: "*"
    };
  }
}

message CreateLotRequest {
  string title = 1;
  int64 start_price = 2;
  int64 step = 3;
  string user_id = 4;
  google.protobuf.Timestamp closing_time = 5;
}

message CreateLotResponse {
  string lot_id = 1;
}

message RefillRequest {
  string user_id = 1;
  int64 amount = 2;
}

message RefillResponse {
  string message = 1;
}

message PlaceBidRequest {
  string user_id = 1;
  string lot_id = 2;
  int64 amount = 3;
}

message PlaceBidResponse {
  string message = 1;
}
